--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -29,9 +29,11 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
-      - run: semgrep ci --sarif > semgrep.sarif
-      - name: Upload SARIF file for GitHub Advanced Security Dashboard
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: semgrep.sarif
+      - run: semgrep ci 
+      #- run: semgrep ci --sarif > semgrep.sarif
+
+      #- name: Upload SARIF file for GitHub Advanced Security Dashboard
+      #  uses: github/codeql-action/upload-sarif@v3
+      #  with:
+      #    sarif_file: semgrep.sarif
         if: always()
