--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,39 +1,26 @@
+name: Semgrep
 on:
   workflow_dispatch: {}
   pull_request: {}
   push:
     branches:
-    - main
-    - master
+      - develop
+      - main
     paths:
-    - .github/workflows/semgrep.yml
+      - .github/workflows/semgrep.yml
   schedule:
-  # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-  - cron: 5 6 * * *
-name: Semgrep
+    # random HH:MM to avoid a load spike on GitHub Actions at 00:00
+    - cron: '56 22 * * *'
 jobs:
   semgrep:
     name: semgrep/ci
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
     container:
-      image: returntocorp/semgrep
-
+      image: semgrep/semgrep
     if: (github.actor != 'dependabot[bot]')
-    permissions:
-      # required for all workflows
-      security-events: write
-      # for workflows in private repos
-      actions: read
-      contents: read
     steps:
       - uses: actions/checkout@v4
-      - run: semgrep ci 
-      #- run: semgrep ci --sarif > semgrep.sarif
+      - run: semgrep ci
 
-      #- name: Upload SARIF file for GitHub Advanced Security Dashboard
-      #  uses: github/codeql-action/upload-sarif@v3
-      #  with:
-      #    sarif_file: semgrep.sarif
-        if: always()
